Improve handling of absolute URLs in Class-Path manifest attribute
Closes gh-10268